merge release crypto-primitives 1.5.2.0-b0